2009-10-14  Cary Coutant  <ccoutant@google.com>

	* dwarf2read.c (read_import_statement): Call follow_die_ref_or_sig.

2009-10-14  Keith Seitz  <keiths@redhat.com>

	* dwarf2read.c (dwarf2_const_value): Fix order of arguments to
	store_unsigned_integer.

2009-10-14  Pedro Alves  <pedro@codesourcery.com>

	* configure.ac (build_warnings): Add -Wunused-value.
	* configure: Regenerate.

2009-10-14  Tristan Gingold  <gingold@adacore.com>

	* solib-darwin.c: Remove trailing whitespaces.
	(darwin_dyld_version_ok): Fix typo.

2009-10-14  Andrew Stubbs  <ams@codesourcery.com>

	* sh-tdep.c (sh_gdbarch_init): Add show_regs settings for
	bfd_mach_sh3_nommu, bfd_mach_sh2a_nofpu_or_sh3_nommu,
	bfd_mach_sh2a_or_sh3e, bfd_mach_sh2a_or_sh4, bfd_mach_sh4_nommu_nofpu,
	and bfd_mach_sh2a_nofpu_or_sh4_nommu_nofpu.
	Move bfd_mach_sh2a_or_sh4 to use the same configuration as
	bfd_mach_sh4.

2009-10-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-tdep.c (arm_push_dummy_call): Set the low bit of LR for
	a Thumb entry point.
	(thumb_get_next_pc): Handle Thumb-2 and ARM v6 instructions.  Refuse
	to single step into IT blocks.

2009-10-13  Pedro Alves  <pedro@codesourcery.com>

	* infcall.c (call_function_by_hand): Formatting.

2009-10-13  Tristan Gingold  <gingold@adacore.com>

	* solib-darwin.c: Add an empty line after comment for functions.
	(struct gdb_dyld_all_image_infos): Improve comment.
	(DYLD_VERSION): Removed and replaced by ...
	(DYLD_VERSION_MAX, DYLD_VERSION_MIN): ... New macros.
	(darwin_dyld_version_ok): New function.
	(darwin_load_image_infos): Call darwin_dyld_version_ok.
	(darwin_current_sos): Ditto.
	(darwin_solib_create_inferior_hook): Ditto.

2009-10-13  Tristan Gingold  <gingold@adacore.com>

	* machoread.c: Add an empty line after comment for functions.
	(oso_el_compare_name): New function.
	(macho_add_oso_symfile): New function.
	(macho_oso_symfile): Use macho_add_oso_symfile.  Sort the oso
	and optimize accesses to libraries.
